--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "netflix-clone",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "fuse.js": "^6.4.6",
     "html-react-parser": "^1.2.4",
     "normalize.css": "^8.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --watchAll",
+    "test": "react-scripts test -o --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
